--- a/src/App.css
+++ b/src/App.css
@@ -54,15 +54,15 @@ h1 {
 }
 
 .products img {
-  width: 380px;
-  height: 240px;
+  width:310px;
+  height: 330px;
   border-radius: 5px;
 }
 
 .product-list {
   margin: 10px;
   padding: 10px;
-  border: solid 3px gainsboro;
+  border: solid 3px rgba(177, 177, 177, 0.217);
   border-radius: 5px;
 }
 
@@ -82,13 +82,13 @@ h1 {
 }
 
 .put-it-in-cart button:hover {
-  transform: scale(2);
+  color: red;
 }
 
 .footer {
   margin-top: 30px;
   width: 100%;
-  background-color: palevioletred;
+  background-color: gainsboro;
   text-align: center;
   place-content: center;
   place-items: center;
@@ -98,7 +98,8 @@ h1 {
   display: grid;
   grid-template-columns: auto auto;
   width: 60%;
-  margin-left: 20%
+  margin-left: 20%;
+  place-content: center;
 }
 
 .footer-container-left {
@@ -110,7 +111,7 @@ h1 {
 
 
 .footer-contact-us {
-  text-align: left;
+  text-align: center;
   font-weight: 530;
   font-size: 16px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
@@ -121,7 +122,7 @@ h1 {
   margin-left: 50px;
 }
 
-.footer-container-right {
+.about-container-right {
   display: grid;
   grid-template-rows: auto auto auto;
   gap: 1.5rem;
@@ -129,17 +130,17 @@ h1 {
   margin-top: 50px
 }
 
-.footer-container-right h2 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.about-container-right h2 {
+  font-family: 'Times New Roman', Times, serif;
   text-align: center;
 }
 
-.footer-container-right form {
+.about-container-right form {
   display: grid;
   grid-template-rows: auto auto;
 }
 
-.footer-container-right button {
+.about-container-right button {
   padding-top: 20px;
   text-align: center;
   background-color: transparent;
@@ -149,7 +150,9 @@ h1 {
   font-family:'Times New Roman', Times, serif;
 }
 
-
+.footer-contact-us a{
+  color: pink;
+}
 .message-mail {
   width: 300px;
   border: solid 1px gray;
@@ -159,19 +162,20 @@ h1 {
   margin-bottom: 5px;
 }
 
-.footer-container-right textarea {
+.about-container-right textarea {
   width: 300px;
   border-radius: 7px;
   margin-left: 10%;
 }
 
-.footer-container-right h3 {
+.about-container-right h3 {
   font-size: 20px;
   font-family: cursive;
   width: 360px;
   text-align: center;
   padding-bottom: 20px;
 }
+
 
 .message-input {
   place-content: center;
@@ -182,6 +186,12 @@ h1 {
 }
 
 .message-input h3 {
+  font-size: 20px;
+  font-family: cursive;
+  text-align: center;
+  padding: 20px;
+}
+.message-input h2 {
   font-size: 20px;
   font-family: cursive;
   text-align: center;
