--- a/src/App.css
+++ b/src/App.css
@@ -169,12 +169,15 @@ h1 {
   padding-top: 20px;
   text-align: center;
   background-color: transparent;
-  border: transparent;
+  border:none;
+  color: gray;
   font-size: 20px;
   font-weight: 550;
   font-family:'Times New Roman', Times, serif;
 }
-
+.about-container-right button:hover{
+  color: black;
+}
 .footer-contact-us a{
   color: pink;
 }
@@ -195,7 +198,7 @@ h1 {
 
 .about-container-right h3 {
   font-size: 20px;
-  font-family: cursive;
+  font-family:'Courier New', Courier, monospace;
   width: 360px;
   text-align: center;
   padding-bottom: 20px;
@@ -212,7 +215,7 @@ h1 {
 
 .message-input h3 {
   font-size: 20px;
-  font-family: cursive;
+  font-family: "Courier New', Courier, monospace";
   text-align: center;
   padding: 20px;
 }
@@ -232,6 +235,10 @@ h1 {
 .show-message ul {
   list-style-type: none;
 }
+.show-message h2{
+  color: pink;
+  font-family: 'Courier New', Courier, monospace;
+}
 
 .message-li {
   text-align: justify;
@@ -240,13 +247,18 @@ h1 {
 }
 
 .message-li p {
-  padding-top: 5px;
   width: 96%;
-  text-align: justify;
+  text-align: center;
   margin-left: 2%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .message-li h3 {
   text-align: end;
+  color: gray;
+}
+.emoji-input {
+  list-style: none;
+  display: grid;
+  grid-auto-flow: column;
 }
